# rembg-api

./: .gitignore  Dockerfile.cpu  Dockerfile.gpu  README.md  compose.gpu.yml  compose.yml  pyproject.toml
src/rembg_api/: birefnet_hr.py  bria_rmbg.py  image_processing.py  limits.py  main.py
tests/: helpers.py  test_api.py  test_birefnet_hr.py  test_birefnet_packaging.py  test_dockerfile_gpu.py  test_image_processing.py  test_limits.py  test_request_limits_and_admission.py
