[project]
name = "rembg-api"
version = "0.1.0"
description = "Thin FastAPI bytes-in/bytes-out wrapper around rembg"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "rembg>=2.0.57",
    "onnxruntime>=1.18.0",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
test = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rembg_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
